--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,18 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
+  flutter_compass: ^0.8.1
+  flutter_map: ^8.1.1
+  formz: ^0.8.0
+  geolocator: ^14.0.0
+  http: ^1.4.0
+  latlong2: ^0.9.1
+  loader_overlay: ^5.0.0
+  permission_handler: ^12.0.0+1
   
 
 dev_dependencies:
