--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  bloc_tools: ^0.1.0-dev.11
   cupertino_icons: ^1.0.8
   equatable: ^2.0.7
   flutter:
